--- a/book/06.Correlation_glacier_climate.ipynb
+++ b/book/06.Correlation_glacier_climate.ipynb
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Correlations between SMBs annual glacier and glacier, where significance is indicated in $\\textbf{*** (p < 0.001), ** (p < 0.01) and * (p < 0.05)}$"
+    "Correlations between SMBs annual glacier and glacier, where significance is indicated in $\\textbf{*** (p < 0.001), ** (p < 0.01) and * (p < 0.05)}$."
    ]
   },
   {
